# git

./: .gitignore  README.md  desktop-launcher.cmd  start.ps1
.agents/skills/cpa-content-auditor/: SKILL.md
.agents/skills/cpa-content-auditor/agents/: openai.yaml
.agents/skills/cpa-difficulty-rater/: SKILL.md
.agents/skills/cpa-difficulty-rater/agents/: openai.yaml
.agents/skills/cpa-explainer/: SKILL.md
.agents/skills/cpa-explainer/agents/: openai.yaml
.agents/skills/cpa-knowledge-extractor/: SKILL.md
.agents/skills/cpa-knowledge-extractor/agents/: openai.yaml
.agents/skills/cpa-knowledge-extractor/references/: card-contract.md
.agents/skills/cpa-six-step-card-builder/: SKILL.md
.agents/skills/cpa-six-step-card-builder/agents/: openai.yaml
.agents/skills/cpa-six-step-card-builder/references/: card-patterns.md
.agents/skills/cpa-source-ingest/: SKILL.md
.agents/skills/cpa-source-ingest/agents/: openai.yaml
.agents/skills/cpa-source-ingest/references/: source-policy.md
api/: .env.example  pyproject.toml
api/app/: __init__.py  ai.py  audit.py  config.py  db.py  main.py  pipeline.py  schemas.py  seed.py
api/tests/: test_api_privacy.py  test_audit.py  test_pipeline.py  test_review_workflow.py  test_schemas.py  test_seed_content.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/review/: page.tsx
web/app/sources/: page.tsx
web/components/: nav.tsx  service-worker.tsx  ui.tsx
web/lib/: api.ts  types.ts
web/public/: manifest.webmanifest  sw.js
(+1 files in other folders)
